Fixing html validation: part 1

--- a/website/about.html
+++ b/website/about.html
@@ -9,13 +9,14 @@
     </head>
     <body>
         <div id="navbar"></div>
-        <header class="page_header">
-            <h1>About Anime NTNU</h1>
-            <hr />
-        </header>
+
         <div class="page_container">
-            <div class="content">
-                <section>
+            <section>
+                <header class="page_header">
+                    <h1>About Anime NTNU</h1>
+                </header>
+                <hr />
+                <div class="info_content">
                     <p>
                         Anime NTNU is a student organization for students and
                         other people who are fond of anime (Japanese animation)
@@ -41,13 +42,14 @@
                         we're handling screenings this semester, check out our
                         Discord.
                     </p>
-                </section>
-            </div>
+                </div>
+            </section>
+
             <header>
                 <h1 id="contact_title">Contact us</h1>
                 <hr />
             </header>
-            <div class="content">
+            <div class="info_content">
                 <section>
                     <p>
                         You can contact us through our
