--- a/website/index.html
+++ b/website/index.html
@@ -19,25 +19,28 @@
 
         <div id="frontpage_container">
             <div id="frontpage_welcome">
-                <h1>Welcome</h1>
-                <hr />
-                <section class="content">
-                    <p>
-                        Hello, and welcome to Anime NTNU's sparkling new
-                        website!
-                    </p>
-                    <p>
-                        Here you can find information about
-                        <a href="screenings.html">upcoming screenings</a>,
-                        <a href="newsfeed.html">news for our members</a>, and
-                        some <a href="about.html">information about us</a>.
-                    </p>
-                    <p>
-                        If you're new to Anime NTNU, maybe take a look at "<a
-                            href="about.html"
-                            >About us</a
-                        >"?
-                    </p>
+                <section>
+                    <header>
+                        <h1>Welcome</h1>
+                    </header>
+                    <hr />
+                    <div class="info_content">
+                        <p>
+                            Hello, and welcome to Anime NTNU's sparkling new
+                            website!
+                        </p>
+                        <p>
+                            Here you can find information about
+                            <a href="screenings.html">upcoming screenings</a>,
+                            <a href="newsfeed.html">news for our members</a>,
+                            and some
+                            <a href="about.html">information about us</a>.
+                        </p>
+                        <p>
+                            If you're new to Anime NTNU, maybe take a look at
+                            "<a href="about.html">About us</a>"?
+                        </p>
+                    </div>
                 </section>
             </div>
 
