--- a/website/voting.html
+++ b/website/voting.html
@@ -10,26 +10,29 @@
     <body>
         <div id="navbar"></div>
 
-        <header class="page_header">
-            <h1>Voting page</h1>
-            <hr />
-        </header>
-
         <div class="page_container">
-            <div class="content">
-                <p>
-                    From this page you may vote on which screenings you would
-                    like Anime NTNU to host first this upcoming semester. You
-                    can do so by dragging and dropping the options to the
-                    desired positions. The order of preference is read from top
-                    to bottom, meaning that the title you arrange first on the
-                    list will be considered the title you would like to watch
-                    the most. Likewise, the title at the bottom of the list will
-                    be considered the title you want to see the least. After
-                    reordering the list to your liking, you can submit the
-                    answerby clicking on the "submit vote" button.
-                </p>
-            </div>
+            <section>
+                <header class="page_header">
+                    <h1>Voting page</h1>
+                    <hr />
+                </header>
+
+                <div class="info_content">
+                    <p>
+                        From this page you may vote on which screenings you
+                        would like Anime NTNU to host first this upcoming
+                        semester. You can do so by dragging and dropping the
+                        options to the desired positions. The order of
+                        preference is read from top to bottom, meaning that the
+                        title you arrange first on the list will be considered
+                        the title you would like to watch the most. Likewise,
+                        the title at the bottom of the list will be considered
+                        the title you want to see the least. After reordering
+                        the list to your liking, you can submit the answerby
+                        clicking on the "submit vote" button.
+                    </p>
+                </div>
+            </section>
 
             <div class="voting_wrapper">
                 <ul class="voting_container">
