--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,7 @@
         />
         <meta name="author" content="Anime NTNU" />
         <link rel="stylesheet" href="css/master.css" />
+        <link rel="icon" href="images/favicon.ico" />
         <script src="scripts/utilsPopup.js"></script>
     </head>
 
