--- a/website/about.html
+++ b/website/about.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.7" />
         <title>Anime NTNU - About</title>
         <link rel="stylesheet" href="css/master.css" />
+        <link rel="icon" href="images/favicon.ico" />
         <script src="scripts/utilsPopup.js"></script>
     </head>
     <body>
