--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.7" />
         <title>Anime NTNU - Newsfeed</title>
         <link rel="stylesheet" href="css/master.css" />
+        <link rel="icon" href="images/favicon.ico" />
         <script src="scripts/initPopup.js"></script>
     </head>
     <body onscroll="checkScroll()">
