Fixing html validation: part 2

--- a/website/about.html
+++ b/website/about.html
@@ -13,10 +13,10 @@
 
         <div class="page_container">
             <section>
-                <header class="page_header">
+                <header class="page_title">
                     <h1>About Anime NTNU</h1>
+                    <hr />
                 </header>
-                <hr />
                 <div class="info_content">
                     <p>
                         Anime NTNU is a student organization for students and
