--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -11,17 +11,21 @@
     <body onscroll="checkScroll()">
         <div id="navbar"></div>
 
-        <header class="page_header">
-            <h1>Newsfeed</h1>
-            <hr />
-        </header>
+        <div class="page_container">
+            <section>
+                <header class="page_title">
+                    <h1>Newsfeed</h1>
+                    <hr />
+                </header>
 
-        <div id="newsfeed_container" class="page_container"></div>
+                <div id="newsfeed_container"></div>
 
-        <header class="page_header">
-            <hr />
-            <h2>That's all folks!</h2>
-        </header>
+                <footer class="page_title">
+                    <hr />
+                    <h2>That's all folks!</h2>
+                </footer>
+            </section>
+        </div>
 
         <script src="scripts/navbar.js"></script>
         <script src="scripts/becomeMember.js"></script>
