--- a/website/voting.html
+++ b/website/voting.html
@@ -13,7 +13,7 @@
 
         <div class="page_container">
             <section>
-                <header class="page_header">
+                <header class="page_title">
                     <h1>Voting page</h1>
                     <hr />
                 </header>
@@ -33,43 +33,45 @@
                         clicking on the "submit vote" button.
                     </p>
                 </div>
-            </section>
 
-            <div class="voting_wrapper">
-                <ul class="voting_container">
-                    <li class="voting_element">Minami-ke (2007)</li>
-                    <li class="voting_element">
-                        Natsume’s Book of Friends (2008)
-                    </li>
-                    <li class="voting_element">
-                        Sayonara Zetsubou Sensei (2008)
-                    </li>
-                    <li class="voting_element">Kyouso Giga (2013)</li>
-                    <li class="voting_element">Rokka no Yuusha (2015)</li>
-                    <li class="voting_element">
-                        ERASED: Boku dake ga Inai Machi (2016)
-                    </li>
-                    <li class="voting_element">Konosuba (2016)</li>
-                    <li class="voting_element">Barakamon (2014)</li>
-                    <li class="voting_element">Overlord (2015)</li>
-                    <li class="voting_element">
-                        The Devil is a Part Timer (2013)
-                    </li>
-                    <li class="voting_element">
-                        Kino no Tabi: The Beautiful World (2003)
-                    </li>
-                    <li class="voting_element">Terror in Resonance (2014)</li>
-                </ul>
-                <div class="button_container">
-                    <button
-                        class="button"
-                        type="button"
-                        onClick="clicked_button()"
-                    >
-                        Submit vote
-                    </button>
+                <div class="voting_wrapper">
+                    <ul class="voting_container">
+                        <li class="voting_element">Minami-ke (2007)</li>
+                        <li class="voting_element">
+                            Natsume’s Book of Friends (2008)
+                        </li>
+                        <li class="voting_element">
+                            Sayonara Zetsubou Sensei (2008)
+                        </li>
+                        <li class="voting_element">Kyouso Giga (2013)</li>
+                        <li class="voting_element">Rokka no Yuusha (2015)</li>
+                        <li class="voting_element">
+                            ERASED: Boku dake ga Inai Machi (2016)
+                        </li>
+                        <li class="voting_element">Konosuba (2016)</li>
+                        <li class="voting_element">Barakamon (2014)</li>
+                        <li class="voting_element">Overlord (2015)</li>
+                        <li class="voting_element">
+                            The Devil is a Part Timer (2013)
+                        </li>
+                        <li class="voting_element">
+                            Kino no Tabi: The Beautiful World (2003)
+                        </li>
+                        <li class="voting_element">
+                            Terror in Resonance (2014)
+                        </li>
+                    </ul>
+                    <div class="button_container">
+                        <button
+                            class="button"
+                            type="button"
+                            onClick="clicked_button()"
+                        >
+                            Submit vote
+                        </button>
+                    </div>
                 </div>
-            </div>
+            </section>
         </div>
 
         <script src="scripts/navbar.js"></script>
