--- a/website/screenings.html
+++ b/website/screenings.html
@@ -13,7 +13,7 @@
 
         <div id="semester_container" class="page_container">
             <section>
-                <header class="page_header">
+                <header class="page_title">
                     <h1>Shows of the semester</h1>
                     <hr />
                 </header>
@@ -24,20 +24,22 @@
                         this semester, and the details of upcoming screenings.
                     </p>
                 </div>
+
+                <div id="screenings_this_semester"></div>
             </section>
 
-            <div id="screenings_this_semester"></div>
+            <section>
+                <header class="page_title">
+                    <h1>Upcoming screenings</h1>
+                    <hr />
+                </header>
 
-            <header class="page_header">
-                <h1>Upcoming screenings</h1>
-                <hr />
-            </header>
-
-            <div id="screenings_container" class="page_container"></div>
-            <header class="page_header">
-                <hr />
-                <h2>That's all folks!</h2>
-            </header>
+                <div id="screenings_container" class="page_container"></div>
+                <footer class="page_title">
+                    <hr />
+                    <h2>That's all folks!</h2>
+                </footer>
+            </section>
         </div>
 
         <script src="scripts/navbar.js"></script>
