Fixing html validation: part 3

--- a/website/about.html
+++ b/website/about.html
@@ -46,22 +46,22 @@
                 </div>
             </section>
 
-            <header>
-                <h1 id="contact_title">Contact us</h1>
-                <hr />
-            </header>
-            <div class="info_content">
-                <section>
+            <section>
+                <header>
+                    <h1 id="contact_title">Contact us</h1>
+                    <hr />
+                </header>
+                <div class="info_content">
                     <p>
                         You can contact us through our
                         <a
-                            href="https://discord.com/invite/3SQwHyZ\"
+                            href="https://discord.com/invite/3SQwHyZ"
                             target="_blank"
                             >Discord server</a
                         >.
                     </p>
-                </section>
-            </div>
+                </div>
+            </section>
         </div>
         <script src="scripts/navbar.js"></script>
         <script src="scripts/becomeMember.js"></script>
