Fixed error with signup popup not working on the newsfeed page

--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -6,7 +6,7 @@
         <title>Anime NTNU - Newsfeed</title>
         <link rel="stylesheet" href="css/master.css" />
         <link rel="icon" href="images/favicon.ico" />
-        <script src="scripts/initPopup.js"></script>
+        <script src="scripts/utilsPopup.js"></script>
     </head>
     <body onscroll="checkScroll()">
         <div id="navbar"></div>
