Some comments in html

--- a/website/index.html
+++ b/website/index.html
@@ -54,6 +54,8 @@
                         <h2>Latest news</h2>
                         <hr />
                     </header>
+                    <!-- This section will be filled with content by
+                         the function 'generateNextScreening' -->
                 </section>
             </div>
 
@@ -66,6 +68,8 @@
                         <h2>Next screening</h2>
                         <hr />
                     </header>
+                    <!-- This section will be filled with content by
+                         the function 'displayLatestNews' -->
                 </section>
             </div>
         </div>
