--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -18,7 +18,10 @@
                     <hr />
                 </header>
 
-                <div id="newsfeed_container"></div>
+                <div id="newsfeed_container">
+                    <!-- This section will be filled with content
+                         by the script 'showNews.js' -->
+                </div>
 
                 <footer class="page_title">
                     <hr />
