--- a/website/screenings.html
+++ b/website/screenings.html
@@ -25,7 +25,10 @@
                     </p>
                 </div>
 
-                <div id="screenings_this_semester"></div>
+                <div id="screenings_this_semester">
+                    <!-- This section will be filled with content by
+                         the function 'generateSemesterAnime' -->
+                </div>
             </section>
 
             <section>
@@ -34,7 +37,10 @@
                     <hr />
                 </header>
 
-                <div id="screenings_container" class="page_container"></div>
+                <div id="screenings_container" class="page_container">
+                    <!-- This section will be filled with content by 
+                         the function 'generateFutureScreenings' -->
+                </div>
                 <footer class="page_title">
                     <hr />
                     <h2>That's all folks!</h2>
