--- a/website/about.html
+++ b/website/about.html
@@ -47,8 +47,8 @@
             </section>
 
             <section>
-                <header>
-                    <h1 id="contact_title">Contact us</h1>
+                <header class="page_title">
+                    <h1>Contact us</h1>
                     <hr />
                 </header>
                 <div class="info_content">
