--- a/website/index.html
+++ b/website/index.html
@@ -84,10 +84,11 @@
             displayLatestNews();
         </script>
         <script>
-            generateNextScreening(
+            generateScreenings (
                 new Date(),
                 ["Rokka", "Hataraku", "Minami", "Zetsubou", "Shirobako"],
-                "next_screening"
+                "next_screening",
+                true
             );
         </script>
         <script src="scripts/becomeMember.js"></script>
