--- a/website/screenings.html
+++ b/website/screenings.html
@@ -25,7 +25,7 @@
                     </p>
                 </div>
 
-                <div id="screenings_this_semester">
+                <div id="semester_screenings">
                     <!-- This section will be filled with content by
                          the function 'generateSemesterAnime' -->
                 </div>
@@ -54,13 +54,13 @@
         <script src="scripts/popupNotification.js"></script>
         <script>
             generateSemesterAnime(
-                ["Rokka", "Hataraku", "Minami", "Zetsubou", "Shirobako"],
-                "screenings_this_semester"
+                ["Rokka", "Hataraku", "Minami", "Zetsubou", "Shirobako", "Tokikake"],
+                "semester_screenings"
             );
-            generateFutureScreenings(
+            generateScreenings (
                 new Date(),
-                ["Rokka", "Hataraku", "Minami", "Zetsubou", "Shirobako"],
-                "screenings_container"
+                ["Rokka", "Hataraku", "Minami", "Zetsubou", "Shirobako", "Tokikake"],
+                "screenings_container",
             );
         </script>
         <script src="scripts/becomeMember.js"></script>
