--- a/website/voting.html
+++ b/website/voting.html
@@ -36,30 +36,18 @@
 
                 <div class="voting_wrapper">
                     <ul class="voting_container">
-                        <li class="voting_element">Minami-ke (2007)</li>
-                        <li class="voting_element">
-                            Natsume’s Book of Friends (2008)
-                        </li>
-                        <li class="voting_element">
-                            Sayonara Zetsubou Sensei (2008)
-                        </li>
-                        <li class="voting_element">Kyouso Giga (2013)</li>
-                        <li class="voting_element">Rokka no Yuusha (2015)</li>
-                        <li class="voting_element">
-                            ERASED: Boku dake ga Inai Machi (2016)
-                        </li>
-                        <li class="voting_element">Konosuba (2016)</li>
-                        <li class="voting_element">Barakamon (2014)</li>
-                        <li class="voting_element">Overlord (2015)</li>
-                        <li class="voting_element">
-                            The Devil is a Part Timer (2013)
-                        </li>
-                        <li class="voting_element">
-                            Kino no Tabi: The Beautiful World (2003)
-                        </li>
-                        <li class="voting_element">
-                            Terror in Resonance (2014)
-                        </li>
+                        <li>Minami-ke (2007)</li>
+                        <li>Natsume’s Book of Friends (2008)</li>
+                        <li>Sayonara Zetsubou Sensei (2008)</li>
+                        <li>Kyouso Giga (2013)</li>
+                        <li>Rokka no Yuusha (2015)</li>
+                        <li>ERASED: Boku dake ga Inai Machi (2016)</li>
+                        <li>Konosuba (2016)</li>
+                        <li>Barakamon (2014)</li>
+                        <li>Overlord (2015)</li>
+                        <li>The Devil is a Part Timer (2013)</li>
+                        <li>Kino no Tabi: The Beautiful World (2003)</li>
+                        <li>Terror in Resonance (2014)</li>
                     </ul>
                     <div class="button_container">
                         <button
