Forgot some stuff for P3

--- a/P3/P3_changes_5.html
+++ b/P3/P3_changes_5.html
@@ -496,6 +496,33 @@
                 </tbody>
             </table>
         </section>
-        <footer></footer>
+
+        <section>
+            <header><h2>Art credit</h2></header>
+            <p>
+                The images used for the screenings are fetched from
+                <a href="https://anilist.co/">AniList</a> and
+                <a href="http://myanimelist.net/">MyAnimeList</a>.
+            </p>
+            <p>
+                Icons are fetched from
+                <a href="https://fontawesome.com/">Font Awesome</a>. The icons
+                are licensed under the Creative Commons Attribution 4.0
+                International.
+            </p>
+        </section>
+
+        <section>
+            <header><h2>Fonts</h2></header>
+            <p>
+                As our client did not specify a specific font or font-style when
+                designing the website, we chose a font which we thought would be
+                suitable for the website. The font we chose was Open Sans, which
+                can be found
+                <a href="https://fonts.google.com/specimen/Open+Sans">here</a>.
+                This font is from Google Fonts. The fallback font used on the
+                website is Sans Serif.
+            </p>
+        </section>
     </body>
 </html>
