--- a/P4/P4_testing_5.html
+++ b/P4/P4_testing_5.html
@@ -38,28 +38,229 @@
 
         <section>
             <header><h2>Testing Document</h2></header>
-            <p></p>
+            <p>
+                Part of our user testing consisted of sending a survey to likely
+                members of our target audience. Below are the questions used in
+                the survey.
+            </p>
+            <ol>
+                <li>What unit did you try the website on?</li>
+                <li>What browser did you use?</li>
+                <li>
+                    You are a... (NTNU student; former NTNU student; student,
+                    but not at NTNU; not a student)
+                </li>
+                <li>Have you been to one of Anime NTNU's screenings?</li>
+                <li>How helpful was the frontpage?</li>
+                <li>Any comments about the frontpage?</li>
+                <li>How was finding information about screenings?</li>
+                <li>Any comments about the screenings page?</li>
+                <li>How was finding news?</li>
+                <li>Any comments about the newsfeed?</li>
+                <li>
+                    How was the voting page? (note: doesn't work in Firefox yet)
+                </li>
+                <li>Any comments about the voting page?</li>
+                <li>What did you think about the design?</li>
+                <li>Any comments about the design?</li>
+                <li>How was navigating the website?</li>
+                <li>Any comments about navigation?</li>
+                <li>Any things you liked about the website?</li>
+                <li>Any things you didn't like about the website?</li>
+            </ol>
+            <p>
+                <a
+                    href="hhttps://docs.google.com/forms/d/19ooVCU80GgOOL18WdlZM35PaB75fmZzmIChcr_mj0R4/edit"
+                    >Here is the link to the google form</a
+                >.
+            </p>
         </section>
 
         <section>
             <header><h2>Tester Audience</h2></header>
-            <p></p>
+            <p>
+                For testing, we performed both surveying with a web form, and
+                live user testing. A Google Form was sent to members of Anime
+                NTNU and other groups of interest. For user testing, the group
+                members contacted friends and acquaintances, gave them some
+                questions and tasks, and observed their responses. In total, 13
+                responses from the webform were submitted, and 8 live tests were
+                performed.
+            </p>
+            <p>
+                Considering that Anime NTNU is a student organization, the
+                target audience consists mainly of students. This has been
+                reflected in our testing procedure, considering that all the
+                people participating in live testing and the majority of webform
+                submitters were students.
+            </p>
         </section>
 
         <section>
             <header><h2>Testing Platforms</h2></header>
+            <p>
+                We were able to run tests with a variety of platforms and web
+                browsers. The platforms covered were Windows 10, Mac, and
+                mobile. Among the web browsers used were Google Chrome,
+                Microsoft Edge, Firefox, Safari, and Vivaldi.
+            </p>
+        </section>
+
+        <section>
+            <header><h2>Graphical representation of survey results</h2></header>
+            <div id="graphs">
+                <div id="column1" class="column">
+                    <img
+                        src="images/graph1.png"
+                        alt="Question 1: What unit did you try the website on?"
+                    />
+                    <img
+                        src="images/graph3.png"
+                        alt="Question 3: You are a..."
+                    />
+                    <img
+                        src="images/graph5.png"
+                        alt="Question 5: How helpful was the frontpage?"
+                    />
+                    <img
+                        src="images/graph7.png"
+                        alt="Question 7: How was finding news?"
+                    />
+                    <img
+                        src="images/graph9.png"
+                        alt="Question 9: What did you think about the design?"
+                    />
+                </div>
+                <div id="column2" class="column">
+                    <img
+                        src="images/graph2.png"
+                        alt="Question 2: What browser did you use?"
+                    />
+                    <img
+                        src="images/graph4.png"
+                        alt="Question 4: Have you been to
+                    one of Anime NTNU's screenings?"
+                    />
+
+                    <img
+                        src="images/graph6.png"
+                        alt="Question 6: How was finding information about screenings?"
+                    />
+
+                    <img
+                        src="images/graph8.png"
+                        alt="Question 8: How was the voting page? (note: doesn't work on Firefox yet)"
+                    />
+
+                    <img
+                        src="images/graph10.png"
+                        alt="Question 10: How was navigating the website?"
+                    />
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <header><h2>Observed testing</h2></header>
+            <p>
+                In addition to the digital schema we sent out, we conducted
+                eight live tests where we observed how a test person interacted
+                with the website. The test person chose their unit and browser
+                of preference and tested different features and functionalities
+                available on the website. As we live tested quite a lot of
+                people, we would like to highlight the testing procedure and
+                feedback received from two of the testers. At the end of this
+                section, we will briefly state the overall issues, opinions and
+                feedback received from all the live tests.
+            </p>
+            <p>The tasks performed in the live testing were the following:</p>
+            <ol>
+                <li>How can you contact Anime NTNU?</li>
+                <li>Find information about the first upcoming screening.</li>
+                <li>What anime are being watched this semester?</li>
+                <li>When is the last screening of the semester?</li>
+                <li>What anime were being watched in the fall of 2013?</li>
+                <li>Vote for which anime you would like to watch.</li>
+                <li>What is Sayonara Zetsubou Sensei about?</li>
+                <li>What is Anime NTNU?</li>
+                <li>Create a user.</li>
+                <li>How can you attend screenings?</li>
+            </ol>
+
+            <section>
+                <header>
+                    <h3>
+                        Test person using a Windows desktop computer with Google
+                        Chrome
+                    </h3>
+                </header>
+                <p>
+                    This person was able to navigate to the desired elements
+                    very quickly. They used the navigation bar extensively. They
+                    immediately understand how to arrange the elements in the
+                    voting list.
+                </p>
+                <p>
+                    They explained that they found it easy to find information,
+                    they found the voting page practical, and they thought it
+                    was positive that information about all upcoming screenings
+                    was published. However, they found it impractical that they
+                    had to join the Discord server to find more information.
+                    They were uncertain in which order the episodes were shown.
+                    They also wanted the ability to show voting results.
+                </p>
+            </section>
+
+            <section>
+                <header><h3>Test person using a Mac with Safari</h3></header>
+                <p></p>
+            </section>
+
+            <section>
+                <header><h3>General experiences from testing</h3></header>
+                <p></p>
+            </section>
         </section>
 
         <section>
             <header><h2>Feedback Summary</h2></header>
+            <section>
+                <header><h3>Positive feedback</h3></header>
+                <p></p>
+            </section>
+            <section>
+                <header><h3>Constructive feedback</h3></header>
+                <p></p>
+            </section>
         </section>
 
         <section>
-            <header><h2>Response to Feedback</h2></header>
+            <header><h2>Response to feedback</h2></header>
+            <p></p>
         </section>
 
         <section>
             <header><h2>Self-reflection</h2></header>
+
+            <section>
+                <header><h3>Maja</h3></header>
+                <p></p>
+            </section>
+
+            <section>
+                <header><h3>Tobias</h3></header>
+                <p></p>
+            </section>
+
+            <section>
+                <header><h3>Aleksander</h3></header>
+                <p></p>
+            </section>
+
+            <section>
+                <header><h3>Sondre</h3></header>
+                <p></p>
+            </section>
         </section>
     </body>
 </html>
