Added justification for why we added some js files

--- a/P3/P3_changes_5.html
+++ b/P3/P3_changes_5.html
@@ -197,23 +197,23 @@
                 </p>
                 <p>
                     ‘anime.js’ contains information about the anime which will
-                    be screened the current semester.
+                    be screened the current semester. We added this to have
+                    actual content on out site. We chose to put this information
+                    in JavaScript objects, to overcome the limitation of using
+                    neither databases nor JSON.
                 </p>
                 <p>
                     ‘showNews.js’ is used to display the latest news post on the
-                    frontpage, and load all news on the newsfeed page.
-                </p>
-                <p>
-                    ‘news.js’ contains all news posts made on
-                    <a href="http://anime.org.ntnu.no/">the old website</a> and
-                    newer posts made on Anime NTNU’s Discord server.
+                    frontpage, and load all news on the newsfeed page. We added
+                    a separate script, 'news.js', for containing all the news
+                    items without databases or JSON.
                 </p>
             </section>
 
             <section>
                 <header><h3>Other</h3></header>
                 <p>
-                    All thumbnails weregiven descriptive names instead of
+                    All thumbnails were given more descriptive names instead of
                     ‘thumbnail_1.png’, ‘thumbnail_2.png’ and so on.
                     Additionally, we added two icons, ‘envelope-solid.svg’ and
                     ‘user-solid.svg’, to use in the signup popup. We also
