--- a/P3/P3_changes_5.html
+++ b/P3/P3_changes_5.html
@@ -211,6 +211,36 @@
             </section>
 
             <section>
+                <header><h3>Mobile responsiveness</h3></header>
+                <p>
+                    Although not a requirement, we made sure that the website
+                    looks good on mobile devices. This was achieved with the use
+                    of media queries in CSS, flexboxes, and the viewport metatag
+                    in HTML.
+                </p>
+                <p>
+                    We planned to have the navigation bar change appearance on
+                    narrow screens, but we ultimately found it helpful to make
+                    other components more responsive as well. The most notable
+                    was the layout of the frontpage. Our initial mockup of this
+                    page shows three sections: 'Welcome', centered on top;
+                    'Latest news' below to the left hand side; and 'Next
+                    screening' below 'Welcome' and to the right hand side. On
+                    narrow screens, the two bottom sections became too narrow to
+                    be of much use. Therefore, we designed the page so that on
+                    narrow screens, the three sections are laid out directly
+                    below each other in a single column.
+                </p>
+                <p>
+                    In addition, on narrow screens, some synopses would be so
+                    large that the close button on the popup would be outside
+                    the clickable window. To mitigate this, we made the
+                    background behind the popup clickable, so that when it is
+                    clicked, the popup closes.
+                </p>
+            </section>
+
+            <section>
                 <header><h3>Other</h3></header>
                 <p>
                     All thumbnails were given more descriptive names instead of
